objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Summary_FAP__c</fullName>
        <description>Consolidates product interest from LST Primary 1-3 for reports.</description>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;FAP - AGENTS FLOURESCENT IMAGING&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;FAP - AGENTS FLOURESCENT IMAGING&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;FAP - AGENTS FLOURESCENT IMAGING&quot;),
 INCLUDES(Product_Interest__c, &quot;FAP&quot;),
 INCLUDES(Product_Line__c, &quot;FAP&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;36-FAP&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-FAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_GPZ__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;GPZ - Geospiza&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;GPZ - Geospiza&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;GPZ - Geospiza&quot;),
 INCLUDES(Product_Line__c, &quot;GPZ&quot;)), 

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-GPZ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_HCS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;HCS - SYSTEMS HIGH CONTENT SCREENING&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;HCS - SYSTEMS HIGH CONTENT SCREENING&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;HCS - SYSTEMS HIGH CONTENT SCREENING&quot;),
 INCLUDES(Product_Interest__c, &quot;High Content Screening - HCS&quot;),
 INCLUDES(Product_Line__c, &quot;HCS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;32-HCS&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-HCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_HTS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;HTS - ONPOINT SERVICES&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;HTS - ONPOINT SERVICES&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;HTS - ONPOINT SERVICES&quot;),
 INCLUDES(Product_Interest__c, &quot;High Throughput Screening Reagents - HTS&quot;),
 INCLUDES(Product_Line__c, &quot;HTS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;22-HTS&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-HTS OnPoint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_IAS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;IAS - SOFTWARE IMAGING &amp; ANALYSIS&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;IAS - SOFTWARE IMAGING &amp; ANALYSIS&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;IAS - SOFTWARE IMAGING &amp; ANALYSIS&quot;),
 INCLUDES(Product_Interest__c, &quot;Imaging Analysis Systems - IAS&quot;),
 INCLUDES(Product_Line__c, &quot;IAS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;33-IAS&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-IAS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_INV__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;INV - SYSTEMS PRE-CLINICAL IMAGING (FMT - USE QTS)&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;INV - SYSTEMS PRE-CLINICAL IMAGING (FMT - USE QTS)&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;INV - SYSTEMS PRE-CLINICAL IMAGING (FMT - USE QTS)&quot;),
 INCLUDES(Product_Interest__c, &quot;INV&quot;),
 INCLUDES(Product_Line__c, &quot;INV&quot;)), 

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-INV</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_LVI__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;LVI - SYSTEMS LIVE CELL IMAGING&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;LVI - SYSTEMS LIVE CELL IMAGING&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;LVI - SYSTEMS LIVE CELL IMAGING&quot;),
 INCLUDES(Product_Interest__c, &quot;LVI&quot;),
 INCLUDES(Product_Line__c, &quot;LVI&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;19-LVI&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-LVI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_MFT__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;MFT - SYSTEMS MICROFLUIDICS&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;MFT - SYSTEMS MICROFLUIDICS&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;MFT - SYSTEMS MICROFLUIDICS&quot;),
 INCLUDES(Product_Interest__c, &quot;MFT&quot;),
 INCLUDES(Product_Line__c, &quot;MFT&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-MFT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_MLD__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;MLD - SYSTEMS MULTIMODE DETECTION&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;MLD - SYSTEMS MULTIMODE DETECTION&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;MLD - SYSTEMS MULTIMODE DETECTION&quot;),
 INCLUDES(Product_Interest__c, &quot;Multilabel Detection - MLD&quot;),
 INCLUDES(Product_Line__c, &quot;MLD&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;17-MLD&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-MLD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_MMO__c</fullName>
        <formula>IF( 
OR( 

ISPICKVAL(LST_Product_Interest_1__c, &quot;MMO - LST DIAGNOSTIC OTHER&quot;) , 
ISPICKVAL(LST_Product_Interest_2__c, &quot;MMO - LST DIAGNOSTIC OTHER&quot;) , 
ISPICKVAL(LST_Product_Interest_3__c, &quot;MMO - LST DIAGNOSTIC OTHER&quot;), 
INCLUDES(Product_Interest__c, &quot;MMO&quot;), 
INCLUDES(Product_Line__c, &quot;MMO&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Summary-MMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_MOL__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;MOL - REAGENTS (NON-RAD) MOLECULAR BIOLOGY&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;MOL - REAGENTS (NON-RAD) MOLECULAR BIOLOGY&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;MOL - REAGENTS (NON-RAD) MOLECULAR BIOLOGY&quot;),
 INCLUDES(Product_Interest__c, &quot;Molecular Biology Reagents - MOL&quot;),
 INCLUDES(Product_Line__c, &quot;MOL&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;24-MOL&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-MOL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_MOX__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;MOX - LST DIAGNOSTICS SYSTEMS LABCHIP DX&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;MOX - LST DIAGNOSTICS SYSTEMS LABCHIP DX&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;MOX - LST DIAGNOSTICS SYSTEMS LABCHIP DX&quot;),
 INCLUDES(Product_Line__c, &quot;MOX&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-MOX</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_NAP__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;NAP - Chemagen Products&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;NAP - Chemagen Products&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;NAP - Chemagen Products&quot;),
 INCLUDES(Product_Line__c, &quot;NAP&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-NAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_NGS__c</fullName>
        <description>Consolidates product interest from LST Primary 1-3 for reports</description>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;NGS - Next Gen Sequencing&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;NGS - Next Gen Sequencing&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;NGS - Next Gen Sequencing&quot;),
 INCLUDES(Product_Interest__c, &quot;NGS&quot;),
 INCLUDES(Product_Line__c, &quot;NGS&quot;)),

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-NGS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_NMO__c</fullName>
        <formula>IF( 
OR( 

ISPICKVAL(LST_Product_Interest_1__c, &quot;NMO - LST NEW MARKETS OTHER&quot;) , 
ISPICKVAL(LST_Product_Interest_2__c, &quot;NMO - LST NEW MARKETS OTHER&quot;) , 
ISPICKVAL(LST_Product_Interest_3__c, &quot;NMO - LST NEW MARKETS OTHER&quot;), 
INCLUDES(Product_Interest__c, &quot;NMO&quot;), 
INCLUDES(Product_Line__c, &quot;NMO&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Summary-NMO</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_NVS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;NVS - LST ALLIANCES NOVASCREEN&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;NVS - LST ALLIANCES NOVASCREEN&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;NVS - LST ALLIANCES NOVASCREEN&quot;),
 INCLUDES(Product_Interest__c, &quot;NVS&quot;),
 INCLUDES(Product_Line__c, &quot;NVS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-NVS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_PBR__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;PBR - REAGENTS PROTEIN BIOLOGY&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;PBR - REAGENTS PROTEIN BIOLOGY&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;PBR - REAGENTS PROTEIN BIOLOGY&quot;),
 INCLUDES(Product_Interest__c, &quot;Protein Biology Reagents - PBR&quot;),
 INCLUDES(Product_Line__c, &quot;PBR&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;29-PBR&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-PBR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_PGI__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;PGI - SYSTEMS PROTEOMICS &amp; GENOMICS&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;PGI - SYSTEMS PROTEOMICS &amp; GENOMICS&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;PGI - SYSTEMS PROTEOMICS &amp; GENOMICS&quot;),
 INCLUDES(Product_Interest__c, &quot;Proteomics &amp; Genomics Instruments - PGI&quot;),
 INCLUDES(Product_Line__c, &quot;PGI&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;21-PGI&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-PGI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_QTS__c</fullName>
        <description>Consolidates product interest from LST Primary 1-3 for reports.</description>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;QTS - SYSTEMS PRE-CLINICAL IMAGING FMT (INV FOR REST)&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;QTS - SYSTEMS PRE-CLINICAL IMAGING FMT (INV FOR REST)&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;QTS - SYSTEMS PRE-CLINICAL IMAGING FMT (INV FOR REST)&quot;),
 INCLUDES(Product_Interest__c, &quot;QTS&quot;),
 INCLUDES(Product_Line__c, &quot;QTS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;37-QTS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <label>Summary-QTS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_RRD__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;RRD - SYSTEMS RADIOMETRIC DETECTION&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;RRD - SYSTEMS RADIOMETRIC DETECTION&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;RRD - SYSTEMS RADIOMETRIC DETECTION&quot;),
 INCLUDES(Product_Interest__c, &quot;Radiometric Detection - RRD&quot;),
 INCLUDES(Product_Line__c, &quot;RRD&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;16-RRD&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-RRD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_RRS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;RRS- REAGENTS NON-RAD&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;RRS- REAGENTS NON-RAD&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;RRS- REAGENTS NON-RAD&quot;),
 INCLUDES(Product_Interest__c, &quot;Research Reagents - RRS&quot;),
 INCLUDES(Product_Line__c, &quot;RRS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-RRS-Non RAD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_RTH__c</fullName>
        <description>For Reports &amp; Views related to LST Product Interest</description>
        <formula>IF( 
OR( 

ISPICKVAL(LST_Product_Interest_1__c, &quot;RTH - RADIOIMAGING &amp; RADIOTHERAPEUTICS&quot;) , 
ISPICKVAL(LST_Product_Interest_2__c, &quot;RTH - RADIOIMAGING &amp; RADIOTHERAPEUTICS&quot;) , 
ISPICKVAL(LST_Product_Interest_3__c, &quot;RTH - RADIOIMAGING &amp; RADIOTHERAPEUTICS&quot;), 
INCLUDES(Product_Line__c, &quot;RTH&quot;)), 

&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-RTH</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_SPS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;SPS - (ALH) SYSTEMS SAMPLE PREP &amp; HTS&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;SPS - (ALH) SYSTEMS SAMPLE PREP &amp; HTS&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;SPS - (ALH) SYSTEMS SAMPLE PREP &amp; HTS&quot;),
 INCLUDES(Product_Interest__c, &quot;Sample Prep Systems - SPS&quot;),
 INCLUDES(Product_Line__c, &quot;SPS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;14-SPS&quot;)),


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-SPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_SVC__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;SVC - OneSource Service &amp; Support&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;SVC - OneSource Service &amp; Support&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;SVC - OneSource Service &amp; Support&quot;),
 INCLUDES(Product_Interest__c, &quot;OneSource Service &amp; Support&quot;),
 INCLUDES(Product_Line__c, &quot;SVC&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-SVC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_TBR__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;TBR - Tissue Biomarker Reagents&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;TBR - Tissue Biomarker Reagents&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;TBR - Tissue Biomarker Reagents&quot;),
 INCLUDES(Product_Interest__c, &quot;TBR - Tissue Biomarker Reagents&quot;),
 INCLUDES(Product_Line__c, &quot;TBR&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;66-TBR&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-TBR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_TIS__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;TIS - LST Optical Components/Polarization&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;TIS - LST Optical Components/Polarization&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;TIS - LST Optical Components/Polarization&quot;),
 INCLUDES(Product_Interest__c, &quot;TIS&quot;),
 INCLUDES(Product_Line__c, &quot;TIS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-TIS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_TSC__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;TSC - LST Microscopy &amp; Analysis&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;TSC - LST Microscopy &amp; Analysis&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;TSC - LST Microscopy &amp; Analysis&quot;),
 INCLUDES(Product_Interest__c, &quot;TSC&quot;),
 INCLUDES(Product_Line__c, &quot;TSC&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-TSC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Count__c</fullName>
        <formula>IF(Title  = &quot;&quot;, 0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Title Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trial_Start__c</fullName>
        <label>Trial Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Weight_Unit__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Weight Unit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BioTech_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BioTech List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Converted_QL__c</fullName>
        <description>Checkbox for Converted Lead</description>
        <label>Converted QL</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cr_Low_Limit__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Cr Low Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Email__c</fullName>
        <label>Custom Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cytotoxicity__c</fullName>
        <label>Cytotoxicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amersham</fullName>
                </value>
                <value>
                    <fullName>PKI</fullName>
                </value>
                <value>
                    <fullName>Alamar Blue</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ga_Low_Limit__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Ga Low Limit</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hardcopy_Via__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Hardcopy Via</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Job_Function__c</fullName>
        <label>Job Function</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>01</fullName>
                    <label>Admin/Office</label>
                </value>
                <value>
                    <fullName>02</fullName>
                    <label>Business Management</label>
                </value>
                <value>
                    <fullName>03</fullName>
                    <label>Customer Services</label>
                </value>
                <value>
                    <fullName>04</fullName>
                    <label>Finance</label>
                </value>
                <value>
                    <fullName>05</fullName>
                    <label>Health Professional</label>
                </value>
                <value>
                    <fullName>06</fullName>
                    <label>IT</label>
                </value>
                <value>
                    <fullName>07</fullName>
                    <label>Lab Professional</label>
                </value>
                <value>
                    <fullName>08</fullName>
                    <label>Marketing Professional</label>
                </value>
                <value>
                    <fullName>13</fullName>
                    <label>Others</label>
                </value>
                <value>
                    <fullName>09</fullName>
                    <label>Purchasing</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>Quality/Regulatory</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>Sales Professional</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>Science &amp; Research</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LQS_Material__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>LQS - Material</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified Lead - Warm</fullName>
                </value>
                <value>
                    <fullName>Qualified Lead - Hot</fullName>
                </value>
                <value>
                    <fullName>Turnback</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Zero Stage</fullName>
                </value>
                <value>
                    <fullName>Create/Plan</fullName>
                </value>
                <value>
                    <fullName>Qualify</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Prove</fullName>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                </value>
                <value>
                    <fullName>Closed Won</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Abandoned</fullName>
                </value>
                <value>
                    <fullName>Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Engaged</label>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                    <isActive>false</isActive>
                    <label>Prospect</label>
                </value>
                <value>
                    <fullName>Qualified Engaged</fullName>
                    <isActive>false</isActive>
                    <label>Qualified Engaged</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mailing_List__c</fullName>
        <label>Mailing List</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Customer Training Schedule</fullName>
                </value>
                <value>
                    <fullName>General Mailing List</fullName>
                </value>
                <value>
                    <fullName>Send Seasons Greeting Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Main_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Main Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ManagerEmail__c</fullName>
        <formula>Owner.Manager.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manage Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MaxContactID__c</fullName>
        <label>LegacyCompanyID</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if this is a new customer who has never used PerkinElmer equipment.</inlineHelpText>
        <label>New Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Person_Score__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Person Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Physician_ID__c</fullName>
        <description>used for NTD / SDx</description>
        <label>Physician ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <inlineHelpText>This field maps over from the Lead Page</inlineHelpText>
        <label>Product Line</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AMS</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>ARS</fullName>
                </value>
                <value>
                    <fullName>ATT</fullName>
                </value>
                <value>
                    <fullName>AVC</fullName>
                </value>
                <value>
                    <fullName>AVS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>BIO</fullName>
                </value>
                <value>
                    <fullName>BTX</fullName>
                </value>
                <value>
                    <fullName>CLH</fullName>
                </value>
                <value>
                    <fullName>CLR</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DAB</fullName>
                </value>
                <value>
                    <fullName>DAO</fullName>
                </value>
                <value>
                    <fullName>DCS</fullName>
                </value>
                <value>
                    <fullName>DEL</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>DL</fullName>
                </value>
                <value>
                    <fullName>DLS</fullName>
                </value>
                <value>
                    <fullName>DNA</fullName>
                </value>
                <value>
                    <fullName>DSK</fullName>
                </value>
                <value>
                    <fullName>DSS</fullName>
                </value>
                <value>
                    <fullName>ELM</fullName>
                </value>
                <value>
                    <fullName>ENT</fullName>
                </value>
                <value>
                    <fullName>ESS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reagent_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reagent List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referrer_URL__c</fullName>
        <label>Referrer URL</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Water__c</fullName>
        <description>ANNUITAS PDG Program</description>
        <label>Status - Water</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Working</fullName>
                </value>
                <value>
                    <fullName>Turnback - Call Attempts Complete</fullName>
                </value>
                <value>
                    <fullName>Turnback - Future Opportunity</fullName>
                </value>
                <value>
                    <fullName>Turnback - Bad Phone Number</fullName>
                </value>
                <value>
                    <fullName>Rejected - Bad Contact Details</fullName>
                </value>
                <value>
                    <fullName>Rejected - Not Involved</fullName>
                </value>
                <value>
                    <fullName>Rejected - Distributor</fullName>
                </value>
                <value>
                    <fullName>Rejected - No Interest</fullName>
                </value>
                <value>
                    <fullName>Converted to Opportunity</fullName>
                </value>
                <value>
                    <fullName>Re-Qualified</fullName>
                    <isActive>false</isActive>
                    <label>Re-Qualified</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Summary_HTS2__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;HTS - REAGENTS SCREENING&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;HTS - REAGENTS SCREENING&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;HTS - REAGENTS SCREENING&quot;),
 INCLUDES(Product_Interest__c, &quot;High Throughput Screening Reagents - HTS&quot;),
 INCLUDES(BD_Product_Family_Interest__c, &quot;22-HTS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-HTS Reagents</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_RRS2__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;RRS - REAGENTS RAD&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;RRS - REAGENTS RAD&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;RRS - REAGENTS RAD&quot;),
 INCLUDES(Product_Interest__c, &quot;Research Reagents - RRS&quot;),
 INCLUDES(Product_Line__c, &quot;RRS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-RRS RAD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summary_RRS3__c</fullName>
        <formula>IF( 
OR(  

ISPICKVAL(LST_Product_Interest_1__c, &quot;RRS - REAGENTS RADIOMETRIC SERVICES&quot;) , 
 ISPICKVAL(LST_Product_Interest_2__c, &quot;RRS - REAGENTS RADIOMETRIC SERVICES&quot;) ,
 ISPICKVAL(LST_Product_Interest_3__c, &quot;RRS - REAGENTS RADIOMETRIC SERVICES&quot;),
 INCLUDES(Product_Interest__c, &quot;Research Reagents - RRS&quot;),
 INCLUDES(Product_Line__c, &quot;RRS&quot;)), 


&quot;TRUE&quot;, &quot;FALSE&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Summary-RRS SVCS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unique Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>